--- a/S2_P2_PROB.tex
+++ b/S2_P2_PROB.tex
@@ -24,7 +24,7 @@
 \clearpage
 
 % Class of 20/03/2024
-\section{Introduction - Continuous random variables}
+\section{Introduction}
 
 In the last partial we studied discrete random variables, which are random variables that can take a finite or countably infinite number of values.
 Now we will consider random variables that take values in an interval of the real line, which are called \emph{continuous random variables}.
